modified styles, fixed weapon config not fitting properly causing size changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .content-wrapper{
-    height: 83%;
+    height: 82%;
     width: 95%;
 }
 
