--- a/src/app/weapon-config/weapon-config.component.css
+++ b/src/app/weapon-config/weapon-config.component.css
@@ -31,7 +31,7 @@
     margin: 0.5vh 0.2vw;
 
     border: var(--element-border-color) 0.15vw solid;
-    border-radius: 0.7vw 0.1vw 0.7vw 0.1vw;
+    border-radius: 0.7vw 0.7vw 0.7vw 0.7vw;
 }
 
 .content-container::-webkit-scrollbar {
